--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@raugfer/jazzicon": "^1.0.6",
+    "@tanstack/react-query": "^5.59.16",
+    "next": "15.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "viem": "^2.21.35",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.1"
+    "typescript": "^5"
   }
 }
