--- a/fe/package.json
+++ b/fe/package.json
@@ -12,9 +12,11 @@
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@raugfer/jazzicon": "^1.0.6",
     "@tanstack/react-query": "^5.59.16",
+    "classnames": "^2.5.1",
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "userop": "^0.4.0-beta.5",
     "viem": "^2.21.35",
     "wagmi": "^2.12.25"
   },
