--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@account-abstraction/sdk": "^0.6.0",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@raugfer/jazzicon": "^1.0.6",
     "@tanstack/react-query": "^5.59.16",
@@ -16,6 +17,7 @@
     "next": "15.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "userop": "^0.4.0-beta.5",
     "viem": "^2.21.35",
     "wagmi": "^2.12.25"
@@ -24,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll-to-bottom": "^4.2.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
